force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/Asignacion_de_clausula_temporaria__c.object-meta.xml
<CustomObject>
    <label>Asignacion de clausula temporaria</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Nombre de Asignacion de clausula tempora</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asignaciones de clauslas temporarias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>