force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Asociado__c.field-meta.xml
<CustomField>
    <fullName>Asociado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asociado</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asignaciones de cláusulas temporarias</relationshipLabel>
    <relationshipName>Asignaciones_de_clausulas_temporarias</relationshipName>
    <type>Lookup</type>
</CustomField>