force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para determinar si el registro llega del batch</description>
    <label>Batch</label>
    <type>Checkbox</type>
</CustomField>