force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/codigo_ACT_SS__c.field-meta.xml
<CustomField>
    <fullName>codigo_ACT_SS__c</fullName>
    <externalId>true</externalId>
    <label>codigo ACT SS</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>