force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Codigo_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Asociado__c</fullName>
    <formula>Asociado__r.Codigo_de_Afiliado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Asociado</label>
    <type>Text</type>
</CustomField>