force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnóstico</label>
    <referenceTo>Diagnostico__c</referenceTo>
    <relationshipLabel>Asignaciones de cláusulas temporarias</relationshipLabel>
    <relationshipName>Asignaciones_de_clausulas_temporarias</relationshipName>
    <type>Lookup</type>
</CustomField>