force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/enviar_a_ss__c.field-meta.xml
<CustomField>
    <fullName>enviar_a_ss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enviar a ss</label>
    <type>Checkbox</type>
</CustomField>