force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Fecha_de_cierre_de_clausula__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_cierre_de_clausula__c</fullName>
    <description>al cambiar este campo impactará en SS cerrando la act</description>
    <label>Fecha de cierre de clausula</label>
    <type>Date</type>
</CustomField>