force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Fecha_de_fallo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_fallo__c</fullName>
    <label>Fecha de fallo</label>
    <type>DateTime</type>
</CustomField>