force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Fecha_de_vigencia_hasta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_vigencia_hasta__c</fullName>
    <label>Fecha de vigencia hasta</label>
    <type>Date</type>
</CustomField>