force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Fecha_desde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_desde__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha desde</label>
    <type>Date</type>
</CustomField>