force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Fecha_FUM__c.field-meta.xml
<CustomField>
    <fullName>Fecha_FUM__c</fullName>
    <label>Fecha FUM</label>
    <type>Date</type>
</CustomField>