force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/FPP__c.field-meta.xml
<CustomField>
    <fullName>FPP__c</fullName>
    <label>FPP</label>
    <type>Date</type>
</CustomField>