force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Motivo_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cierre__c</fullName>
    <description>Campo motivo de cierre de act, se debera completar cuando completen la fecha de cierre</description>
    <label>Motivo de cierre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>