force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMI_MADRE</fullName>
                <default>true</default>
                <label>PMI Madre</label>
            </value>
            <value>
                <fullName>PMI_HIJO</fullName>
                <label>PMI Hijo</label>
            </value>
            <value>
                <fullName>COB EMER</fullName>
            </value>
            <value>
                <fullName>COB ADIC IDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>