force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/validationRules/Completar_motivo_de_cierre.validationRule-meta.xml
<ValidationRule>
    <fullName>Completar_motivo_de_cierre</fullName>
    <active>true</active>
    <description>Si se completa la fecha de cierre debemos completar obligatoriamente un motivo</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Fecha_de_cierre_de_clausula__c )),
ISBLANK( Motivo_de_cierre__c )
)</errorConditionFormula>
    <errorMessage>Para cerrar la Cláusula se deberá completar un motivo</errorMessage>
</ValidationRule>