force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/validationRules/Fecha_de_cierre.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_cierre</fullName>
    <active>true</active>
    <description>la fecha de cierre debera ser menor al a fecha de vigencia hasta</description>
    <errorConditionFormula>Fecha_de_cierre_de_clausula__c  &gt; Fecha_de_vigencia_hasta__c</errorConditionFormula>
    <errorMessage>La fecha de cierre deberá ser menor a la fecha de vigencia hasta</errorMessage>
</ValidationRule>