force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/validationRules/Fecha_probable_de_parto.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_probable_de_parto</fullName>
    <active>true</active>
    <description>La Fecha probable de parto debe ser menor o igual a la Fecha FUM + 41 semanas.</description>
    <errorConditionFormula>AND(
NOT( Batch__c ),
FPP__c &gt; (Fecha_FUM__c + 287)
)</errorConditionFormula>
    <errorDisplayField>FPP__c</errorDisplayField>
    <errorMessage>La Fecha probable de parto debe ser menor o igual a la Fecha FUM + 41 semanas</errorMessage>
</ValidationRule>