force-app/main/default/objects/Asignacion_de_clausula_temporaria__c/validationRules/No_modificar_cuando_cierra.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_cuando_cierra</fullName>
    <active>true</active>
    <description>Si ya esta cerrada la clausula no debemos modificar</description>
    <errorConditionFormula>AND(
NOT(Batch__c),
NOT( ISBLANK( Fecha_de_cierre_de_clausula__c ) ),
OR(
ISCHANGED( FPP__c ),
ISCHANGED( Fecha_FUM__c ),
ISCHANGED( Descripcion__c )
)
)</errorConditionFormula>
    <errorMessage>Cláusula temporaria cerrada</errorMessage>
</ValidationRule>